syntax = "proto3";

package com.example.grpc.friendship;

message LongLongRequest {
  int64 firstLong = 1;
  int64 secondLong = 2;
}

message LongLongBooleanRequest{
  int64 firstLong = 1;
  int64 secondLong = 2;
  bool boolean = 3;
}

message LongBooleanRequest{
  int64 firstLong = 1;
  bool boolean = 2;
}

message LongRequest {
  int64 firstLong = 1;
}

message BooleanResponse {
  bool boolean = 1;
}

message LongListResponse {
  repeated int64 list = 1;
}

service FriendshipService {
  rpc friendshipRequest(LongLongRequest) returns (BooleanResponse);
  rpc acceptFriendshipRequest(LongLongRequest) returns (BooleanResponse);
  rpc rejectFriendshipRequest(LongLongRequest) returns (BooleanResponse);
  rpc discardFriendship(LongLongRequest) returns (BooleanResponse);
  rpc getAllFriends(LongRequest) returns (LongListResponse);
  rpc getAllFriendshipRequests(LongRequest) returns (LongListResponse);
  rpc existsFriendshipByUserIdAndFriendId(LongLongRequest) returns (BooleanResponse);
  rpc existsFriendshipByUserIdAndFriendIdAndStatus(LongLongBooleanRequest) returns (BooleanResponse);
  rpc existsFriendshipByUserIdAndStatus(LongBooleanRequest) returns (BooleanResponse);
}